--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -262,7 +262,7 @@
                         <div class="col-6">
                             <div class="row">
                                 <div class="col-3 offset-1 form-label">
-                                    <label class="mandatory">Email</label>
+                                    <label class="mandatory">Email ID</label>
                                 </div>
                                 <div class="col-7">
                                     <input type="text" class="form-control" formControlName="email"
