--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -884,7 +884,7 @@
                         <div class="col-6">
                             <div class="row">
                                 <div class="offset-1 col-3 form-label">
-                                    <label [class.mandatory]="viewOnly"> Email </label>
+                                    <label [class.mandatory]="viewOnly"> Email ID </label>
                                 </div>
                                 <div class="col-7">
                                     <input type="text" class="form-control" formControlName="email"
