added branchout in scrap update location

--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -152,6 +152,12 @@
                             <div *ngIf="item?.scrapStage?.id == 12">
                                 <button class="primary-button">{{item?.scrapStage?.stageName | uppercase}}</button>
                             </div>
+                            <div *ngIf="item?.scrapStage?.id == 13">
+                                <button class="primary-button">{{item?.scrapStage?.stageName | uppercase}}</button>
+                            </div>
+                            <div *ngIf="item?.scrapStage?.id == 14">
+                                <button class="primary-button">{{item?.scrapStage?.stageName | uppercase}}</button>
+                            </div>
                         </div>
                     </mat-cell>
                 </ng-container>
