--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packet-tracking/packet-tracking.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packet-tracking/packet-tracking.component.scss
@@ -7,7 +7,7 @@
         flex: 0 0 8% !important;
     }
     .mat-column-actions{
-        flex: 0 0 26% !important;
+        flex: 0 0 18% !important;
     } 
     .mat-column-internalBranch{
         flex: 0 0 7% !important;
@@ -30,8 +30,11 @@
     .mat-column-mobileNumber{
         flex: 0 0 10% !important;
     }
+    .mat-column-elapseTime{
+        flex: 0 0 8% !important;
+    }
     mat-row,mat-header-row{
-        width: 150% !important;
+        width: 140% !important;
     }
     .multiple {
         display: flex;
