--- a/gold-admin-frontend/src/app/views/partials/components/scrap-update-location/scrap-update-location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/scrap-update-location/scrap-update-location.component.html
@@ -23,7 +23,6 @@
                                 </mat-error>
                             </div>
                         </div>
-
                         <!-- Internal Branch -->
                         <div *ngIf="controls.packetLocationId.value == 2" class="row kt-margin-t-15">
                             <div class="col-4 form-label">
@@ -42,7 +41,6 @@
                                 </mat-error>
                             </div>
                         </div>
-
                         <!-- Partner Branch ID -->
                         <div *ngIf="controls.packetLocationId.value == 4" class=" justify-content-center">
                             <div class="row kt-margin-t-15">
@@ -134,9 +132,8 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- Deliver To -->
-                        <div class="row" *ngIf="data.isOut">
+                        <!-- <div class="row" *ngIf="data.isOut">
                             <div class="col-12">
                                 <div class="row kt-margin-t-15">
                                     <div class="col-4 form-label">
@@ -176,10 +173,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Deliver To ends -->
-
-                        <div class="row justify-content-center kt-margin-t-15">
+                        <!-- <div class="row justify-content-center kt-margin-t-15">
                             <div class="col-4 form-label">
                                 <label class="kt-padding-l-10 mandatory">User Type</label>
                             </div>
@@ -197,79 +193,105 @@
                                 </mat-error>
 
                             </div>
+                        </div> -->
+                    </div>
+                    <div *ngIf="!data.isOut">
+                        <div class="row justify-content-center kt-margin-t-15">
+                            <div class="col-4 form-label">
+                                <label class="kt-padding-l-10 mandatory">Mobile Number</label>
+                            </div>
+                            <div class="col-8">
+                                <input class="form-control" formControlName="mobileNumber" (blur)="getDetailsByMobile()"
+                                    [class.isError]="locationForm.controls.mobileNumber.invalid &&  locationForm.controls.mobileNumber.touched"
+                                    maxlength="10" />
+                                <mat-error
+                                    *ngIf="locationForm.controls.mobileNumber.touched && locationForm.controls.mobileNumber.errors?.required">
+                                    Required field
+                                </mat-error>
+                                <mat-error
+                                    *ngIf="locationForm.controls.mobileNumber.touched && locationForm.controls.mobileNumber.errors?.pattern">
+                                    Invalid Input
+                                </mat-error>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center kt-margin-t-15">
+                            <div class="col-4 form-label">
+                                <label class="kt-padding-l-10 mandatory">User</label>
+                            </div>
+                            <div class="col-8">
+                                <input readonly class="form-control cursor-not-allowed" formControlName="user"
+                                    [class.isError]="locationForm.controls.user.invalid &&  locationForm.controls.user.touched" />
+                                <mat-error
+                                    *ngIf="locationForm.controls.user.touched && locationForm.controls.user.errors?.required">
+                                    Required field
+                                </mat-error>
+                            </div>
+                        </div>
+                        <div *ngIf="controls.receiverType.value == 'InternalUser'"
+                            class="row justify-content-center kt-margin-t-15">
+                            <div class="col-4 form-label">
+                                <label class="kt-padding-l-10">Role</label>
+                            </div>
+                            <div class="col-8">
+                                <input readonly class="form-control cursor-not-allowed" formControlName="role"
+                                    [class.isError]="locationForm.controls.role.invalid &&  locationForm.controls.role.touched" />
+
+                            </div>
+                        </div>
+                        <div class="row justify-content-center kt-margin-t-15">
+                            <div class="col-4 offset-4">
+                                <kt-button *ngIf="!otpSent" [myClass]="'w-100'" [type]="'button'" [notTitleCase]="true"
+                                    [value]="'Send OTP'" (action)="sendOTP()"></kt-button>
+                                <kt-button *ngIf="otpSent" [myClass]="'w-100'" [type]="'button'" [value]="'Sent'">
+                                </kt-button>
+                            </div>
+                            <div class="col-4 d-flex justify-content-center align-items-center ">
+                                <label class="kt-pointer kt-link kt-link--brand kt-font-bolder" (click)="generateOTP()">
+                                    Resend OTP</label>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center kt-margin-t-15">
+                            <div class="col offset-4">
+                                <input type="text" class="form-control" numbersOnly placeholder="Enter OTP"
+                                    formControlName="otp"
+                                    [class.isError]="locationForm.controls.otp.invalid &&  locationForm.controls.otp.touched"
+                                    [readonly]="otpVerfied" [class.cursor-not-allowed]="otpVerfied">
+                            </div>
+                            <div class="col-4" *ngIf="otpSent">
+                                <kt-button *ngIf="!otpVerfied" [myClass]="'w-100'" [type]="'button'" [value]="'Verify'"
+                                    (action)="verifyOTP()">
+                                </kt-button>
+                                <button *ngIf="otpVerfied" type="button" mat-raised-button class="w-100 success-button">
+                                    Verified </button>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="row justify-content-center kt-margin-t-15">
-                        <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">Mobile Number</label>
+                    <div *ngIf="data.isOut">
+                        <div class="row justify-content-center kt-margin-t-15">
+                            <div class="col-4 form-label">
+                                <label class="kt-padding-l-10 mandatory">Courier</label>
+                            </div>
+                            <div class="col-8">
+                                <input class="form-control" formControlName="courier"
+                                    [class.isError]="locationForm.controls.courier.invalid &&  locationForm.controls.courier.touched" />
+                                <mat-error
+                                    *ngIf="locationForm.controls.courier.touched && locationForm.controls.courier.errors?.required">
+                                    Required field
+                                </mat-error>
+                            </div>
                         </div>
-                        <div class="col-8">
-                            <input class="form-control" formControlName="mobileNumber" (blur)="getDetailsByMobile()"
-                                [class.isError]="locationForm.controls.mobileNumber.invalid &&  locationForm.controls.mobileNumber.touched"
-                                maxlength="10" />
-                            <mat-error
-                                *ngIf="locationForm.controls.mobileNumber.touched && locationForm.controls.mobileNumber.errors?.required">
-                                Required field
-                            </mat-error>
-                            <mat-error
-                                *ngIf="locationForm.controls.mobileNumber.touched && locationForm.controls.mobileNumber.errors?.pattern">
-                                Invalid Input
-                            </mat-error>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center kt-margin-t-15">
-                        <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">User</label>
-                        </div>
-                        <div class="col-8">
-                            <input readonly class="form-control cursor-not-allowed" formControlName="user"
-                                [class.isError]="locationForm.controls.user.invalid &&  locationForm.controls.user.touched" />
-                            <mat-error
-                                *ngIf="locationForm.controls.user.touched && locationForm.controls.user.errors?.required">
-                                Required field
-                            </mat-error>
-                        </div>
-                    </div>
-
-                    <div *ngIf="controls.receiverType.value == 'InternalUser'"
-                        class="row justify-content-center kt-margin-t-15">
-                        <div class="col-4 form-label">
-                            <label class="kt-padding-l-10">Role</label>
-                        </div>
-                        <div class="col-8">
-                            <input readonly class="form-control cursor-not-allowed" formControlName="role"
-                                [class.isError]="locationForm.controls.role.invalid &&  locationForm.controls.role.touched" />
-
-                        </div>
-                    </div>
-
-                    <div class="row justify-content-center kt-margin-t-15">
-                        <div class="col-4 offset-4">
-                            <kt-button *ngIf="!otpSent" [myClass]="'w-100'" [type]="'button'" [notTitleCase]="true"
-                                [value]="'Send OTP'" (action)="sendOTP()"></kt-button>
-                            <kt-button *ngIf="otpSent" [myClass]="'w-100'" [type]="'button'" [value]="'Sent'">
-                            </kt-button>
-                        </div>
-                        <div class="col-4 d-flex justify-content-center align-items-center ">
-                            <label class="kt-pointer kt-link kt-link--brand kt-font-bolder" (click)="generateOTP()">
-                                Resend OTP</label>
-                        </div>
-                    </div>
-
-                    <div class="row justify-content-center kt-margin-t-15">
-                        <div class="col offset-4">
-                            <input type="text" class="form-control" numbersOnly placeholder="Enter OTP"
-                                formControlName="otp"
-                                [class.isError]="locationForm.controls.otp.invalid &&  locationForm.controls.otp.touched"
-                                [readonly]="otpVerfied" [class.cursor-not-allowed]="otpVerfied">
-                        </div>
-                        <div class="col-4" *ngIf="otpSent">
-                            <kt-button *ngIf="!otpVerfied" [myClass]="'w-100'" [type]="'button'" [value]="'Verify'"
-                                (action)="verifyOTP()">
-                            </kt-button>
-                            <button *ngIf="otpVerfied" type="button" mat-raised-button class="w-100 success-button">
-                                Verified </button>
+                        <div class="row justify-content-center kt-margin-t-15">
+                            <div class="col-4 form-label">
+                                <label class="kt-padding-l-10 mandatory">POD Number</label>
+                            </div>
+                            <div class="col-8">
+                                <input class="form-control" formControlName="podNumber"
+                                    [class.isError]="locationForm.controls.podNumber.invalid &&  locationForm.controls.podNumber.touched" />
+                                <mat-error
+                                    *ngIf="locationForm.controls.podNumber.touched && locationForm.controls.podNumber.errors?.required">
+                                    Required field
+                                </mat-error>
+                            </div>
                         </div>
                     </div>
                 </div>
