--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-location/view-location.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-location/view-location.component.html
@@ -26,6 +26,19 @@
                         <agm-info-window [isOpen]="m.isVisible">
                             <span *ngIf="!infoToggle[i]">
                                 <strong *ngIf="m.trackingTime">{{m.trackingTime | time24to12}}</strong>
+                                <span *ngFor="let item of m.masterLoan.masterLoan.locationData; first as f">
+                                    <span *ngIf="f">
+                                        <span
+                                            *ngIf="item.packetLocationId === 6 || item.packetLocationId === 3 || item.packetLocationId === 5 || item.packetLocationId === 1">
+                                            <kt-elapsed-time [startTime]="item.createdAt"></kt-elapsed-time>
+                                        </span>
+                                        <ng-container
+                                            *ngIf="item.packetLocationId === 2 && !m.masterLoan.isLoanCompleted">
+                                            <kt-elapsed-time [startTime]="m.masterLoan?.customerLoanDisbursement[0].cr">
+                                            </kt-elapsed-time>
+                                        </ng-container>
+                                    </span>
+                                </span>
                             </span>
                             <div class="font">
                                 <span *ngIf="infoToggle[i]" style="z-index: 999">
@@ -56,7 +69,8 @@
                 </agm-map>
             </mat-tab>
             <mat-tab label="Location">
-                <kt-location [from]="'viewLocation'" [masterLoanId]="masterLoanId" [date]="mapReport.controls.dateForLocation.value">
+                <kt-location [from]="'viewLocation'" [masterLoanId]="masterLoanId"
+                    [date]="mapReport.controls.dateForLocation.value">
                 </kt-location>
             </mat-tab>
         </mat-tab-group>
