--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
@@ -75,10 +75,12 @@
                             <span *ngIf="l">
                                 <ng-container
                                     *ngIf="item.packetLocationId === 6 || item.packetLocationId === 3 || item.packetLocationId === 5 || item.packetLocationId === 1">
-                                    <kt-elapsed-time [startTime]="item?.createdAt"></kt-elapsed-time>
+                                    <kt-elapsed-time [startTime]="item?.createdAt"
+                                        [locationTracking]="packet.commentByAppraiser"></kt-elapsed-time>
                                 </ng-container>
                                 <ng-container *ngIf="item.packetLocationId === 2 && !packet.isLoanCompleted">
-                                    <kt-elapsed-time [startTime]="packet?.customerLoanDisbursement[0].createdAt">
+                                    <kt-elapsed-time [startTime]="packet?.customerLoanDisbursement[0].createdAt"
+                                        [locationTracking]="packet.commentByAppraiser">
                                     </kt-elapsed-time>
                                 </ng-container>
                             </span>
