--- a/gold-admin-frontend/src/app/views/partials/components/elapsed-time/elapsed-time.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/elapsed-time/elapsed-time.component.html
@@ -1,1 +1,10 @@
-{{ totalTime }}
+<div class="row">
+    <div class="col">
+        {{ totalTime }}
+    </div>
+    <div *ngIf="locationTracking" class="col">
+        <div *ngIf="showAlert" class="alert-container">
+            <div class="red-alert"></div>
+        </div>
+    </div>
+</div>
