fixed scrap  issues

--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -147,6 +147,7 @@
                             </div>
                             <div *ngIf="item?.scrapStage?.id == 11">
                                 <button (click)="getPacketDetails(item)"
+                                    [class.cursor-not-allowed]="getPermission(item)"
                                     class="primary-button">{{item?.scrapStage?.stageName | uppercase}}</button>
                             </div>
                             <div *ngIf="item?.scrapStage?.id == 12">
