--- a/gold-admin-frontend/src/app/views/partials/components/scrap-update-location/scrap-update-location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/scrap-update-location/scrap-update-location.component.html
@@ -108,7 +108,7 @@
                                                     <small>
                                                         <mat-error
                                                             *ngIf="item.get('Barcode').errors?.required &&  item.get('Barcode').touched">
-                                                            Field Required
+                                                            Required field
                                                         </mat-error>
                                                     </small>
                                                     <small>
