--- a/gold-admin-frontend/src/app/views/partials/components/emi-logs-dialog/emi-logs-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/emi-logs-dialog/emi-logs-dialog.component.html
@@ -5,11 +5,11 @@
         <div class="table-div kt-padding-20">
             <table class="table outer-border">
                 <thead>
-                    <th class="transparent">EMI DUE DATE</th>
-                    <th class="transparent">INTEREST AMOUNT</th>
-                    <th class="transparent">INTEREST PAID AMOUNT</th>
-                    <th class="transparent">PENAL AMOUNT</th>
-                    <th class="transparent">PENAL PAID AMOUNT</th>
+                    <th class="transparent">EMI Due Date</th>
+                    <th class="transparent">Interest Amount</th>
+                    <th class="transparent">Interest Paid Amount</th>
+                    <th class="transparent">Penal Amount</th>
+                    <th class="transparent">Penal Paid Amount</th>
                     <th class="transparent">Payment Date</th>
                     <th class="transparent">Pending Interest EMI</th>
                     <th class="transparent">Status</th>
