global map chnages

--- a/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.scss
@@ -25,4 +25,7 @@
     ::ng-deep mat-expansion-panel-header{
         height: 50px !important;
     }
+    ::ng-deep .agm-info-window-content{
+        overflow-x:hidden !important ;
+    }
 }
