--- a/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/global-map/global-map.component.html
@@ -38,14 +38,15 @@
                                     <mat-panel-title>
                                         {{info?.user.firstName | titlecase}}&nbsp;
                                         {{info?.user.lastName | titlecase}}
-
+                                       
                                     </mat-panel-title>
                                 </mat-expansion-panel-header>
 
                                 <ng-template matExpansionPanelContent>
                                     <div *ngFor="let loan of info.packetTrackingMasterloan;index as i" [ngClass]="i == 0?'p-0':'pt-2'">
                                         {{loan?.masterLoan?.customerLoan[0]?.loanUniqueId}}
-
+                                        <span style="float: right;">
+                                            <img src="../../../../../assets/media/icons/compass.svg" height="20" alt="" ></span>
                                         <!-- <span *ngIf="info.masterLoan.customerLoan[1].loanUniqueId">
                                         {{info.masterLoan.customerLoan[1].loanUniqueId}}
                                     </span> -->
@@ -56,28 +57,27 @@
 
                     </div>
                     <div class="col-9">
+                        <img src="../../../../../assets/media/icons/e" alt="">
                         <agm-map [latitude]='latitude' [longitude]='longitude' [zoom]="15" [fitBounds]="true">
                             <agm-marker *ngFor="let m of markers; let i = index" [latitude]="m.lat" [longitude]="m.lng"
                                 [markerDraggable]="m.draggable" (markerClick)="clickedMarker(m.lat, m.lng, i)"
-                                [agmFitBounds]="true">
-
-                                <agm-info-window [isOpen]="m.isVisible">
+                                [agmFitBounds]="true" [iconUrl]="icon">
+                                <agm-info-window [isOpen]="m.isVisible" >
                                     <span>
                                         <strong>
                                             {{m.firstName |titlecase}}&nbsp;{{m.lastName |titlecase}} <span
                                                 *ngIf="infoToggle[i]">| {{m.trackingTime | time24to12}}</span>
                                         </strong>
                                         <div>
-                                            {{m.masterLoan.locationData | json}}
                                             <span *ngFor="let item of m.masterLoan.locationData; first as f">
-                                                <span *ngIf="f">
+                                                <span *ngIf="f"  style="width: 75px;">
                                                     <span
-                                                        *ngIf="item.packetLocationId === 6 || item.packetLocationId === 3 || item.packetLocationId === 5 || item.packetLocationId === 1">
-                                                        <kt-elapsed-time [startTime]="item.createdAt"></kt-elapsed-time>
+                                                        *ngIf="item.packetLocation === 6 || item.packetLocation === 3 || item.packetLocation === 5 || item.packetLocation === 1">
+                                                        <kt-elapsed-time [startTime]="item.createdAt" [locationTracking]="false"></kt-elapsed-time>
                                                     </span>
                                                     <ng-container
-                                                        *ngIf="item.packetLocationId === 2 && !m.masterLoan.isLoanCompleted">
-                                                        <kt-elapsed-time [startTime]="m.masterLoan?.customerLoanDisbursement[0].cr">
+                                                        *ngIf="item.packetLocation === 2 && !m.masterLoan.isLoanCompleted">
+                                                        <kt-elapsed-time [startTime]="m.masterLoan?.customerLoanDisbursement[0].cr" [locationTracking]="false">
                                                         </kt-elapsed-time>
                                                     </ng-container>
                                                 </span>
